// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> renders correctly the component 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-center"
  >
    <div
      class="login card"
    >
      <div
        class="card-body"
      >
        <form
          class="d-flex flex-column align-items-center"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              login.email
            </label>
            <input
              class="form-control"
              data-testid="login-email"
              placeholder="login.email"
              type="email"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              login.password
            </label>
            <input
              class="form-control"
              data-testid="login-password"
              placeholder="login.password"
              type="password"
            />
          </div>
          <button
            class="btn btn-primary"
            data-testid="login-submit"
            type="submit"
          >
            login.submit
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> submit and show errors: errors 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-center"
  >
    <div
      class="login card"
    >
      <div
        class="card-body"
      >
        <form
          class="d-flex flex-column align-items-center"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              login.email
            </label>
            <input
              class="form-control"
              data-testid="login-email"
              placeholder="login.email"
              type="email"
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              login.password
            </label>
            <input
              class="form-control"
              data-testid="login-password"
              placeholder="login.password"
              type="password"
            />
          </div>
          <div
            class="text-danger my-2"
            data-testid="login-error"
          >
            <span>
              errors.login
            </span>
          </div>
          <button
            class="btn btn-primary"
            data-testid="login-submit"
            type="submit"
          >
            login.submit
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
